welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:2: error: value %== is not a member of Int
  if(a%==b%5){
      ^