welcome.lessons.welcome.bat.bool2.MaxMod5.scala.code
def maxMod5(a:Int, b:Int):Int = {
  if(a%==b%5){
    if(a<b){return a}
    if (b<a){return b}
    else{return 0}
  }
  else{
    if(a<b){return b}
    if (b<a){return a}
    else{return 0}
  }
}